--- a/newGuo/news-brief.html
+++ b/newGuo/news-brief.html
@@ -169,98 +169,58 @@
             </li>
         </ul>
         <div class="news-left">
-            <ul>
-                <li>
-                    <div class="time-date">
-                        2014年4月28日
-                    </div>
-                    <div class="new-detail">
-                        <div class="news-detail-img">
-                            <img src="images/index_01.jpg" alt=""/>
-                        </div>
-                        <div class="news-right-detail">
-                            <h3>国馆酒亮相国际名酒展，国馆酒亮相国际名酒展</h3>
-                            <div>
-                                5月22日，国馆酒亮相国际名酒展，国馆酒亮相国际名酒展国馆酒亮相国际名酒展，国馆酒亮相国际名酒展国馆酒亮相国际名酒展，国馆酒亮相国际名酒展国馆酒亮相国际名酒展，国馆酒亮相国际名酒展。
-                            </div>
-                        </div>
-                    </div>
-                    <div style="clear: both;"></div>
-                </li>
-                <li>
-                    <div class="time-date">
-                        2014年4月28日
-                    </div>
-                    <div class="new-detail">
-                        <div class="news-detail-img">
-                            <img src="images/index_01.jpg" alt=""/>
-                        </div>
-                        <div class="news-right-detail">
-                            <h3>国馆酒亮相国际名酒展，国馆酒亮相国际名酒展</h3>
-                            <div>
-                                5月22日，国馆酒亮相国际名酒展，国馆酒亮相国际名酒展国馆酒亮相国际名酒展，国馆酒亮相国际名酒展国馆酒亮相国际名酒展，国馆酒亮相国际名酒展国馆酒亮相国际名酒展，国馆酒亮相国际名酒展。
-                            </div>
-                        </div>
-                    </div>
-                    <div style="clear: both;"></div>
-                </li>
-                <li>
-                    <div class="time-date">
-                        2014年4月28日
-                    </div>
-                    <div class="new-detail">
-                        <div class="news-detail-img">
-                            <img src="images/index_01.jpg" alt=""/>
-                        </div>
-                        <div class="news-right-detail">
-                            <h3>国馆酒亮相国际名酒展，国馆酒亮相国际名酒展</h3>
-                            <div>
-                                5月22日，国馆酒亮相国际名酒展，国馆酒亮相国际名酒展国馆酒亮相国际名酒展，国馆酒亮相国际名酒展国馆酒亮相国际名酒展，国馆酒亮相国际名酒展国馆酒亮相国际名酒展，国馆酒亮相国际名酒展。
-                            </div>
-                        </div>
-                    </div>
-                    <div style="clear: both;"></div>
-                </li>
-                <li>
-                    <div class="time-date">
-                        2014年4月28日
-                    </div>
-                    <div class="new-detail">
-                        <div class="news-detail-img">
-                            <img src="images/index_01.jpg" alt=""/>
-                        </div>
-                        <div class="news-right-detail">
-                            <h3>国馆酒亮相国际名酒展，国馆酒亮相国际名酒展</h3>
-                            <div>
-                                5月22日，国馆酒亮相国际名酒展，国馆酒亮相国际名酒展国馆酒亮相国际名酒展，国馆酒亮相国际名酒展国馆酒亮相国际名酒展，国馆酒亮相国际名酒展国馆酒亮相国际名酒展，国馆酒亮相国际名酒展。
-                            </div>
-                        </div>
-                    </div>
-                    <div style="clear: both;"></div>
-                </li>
-                <a href="#" class="get-more">加载更多 ></a>
-            </ul>
+            <div class="left-content">
+                <div class="right-date">
+                    2014年2月31日
+                </div>
+                <h3>国馆酒亮相国际名酒展，国馆酒亮相国际名酒展</h3>
+                <div class="paper-content">
+                    内容区
+                </div>
+            </div>
         </div>
         <div class="news-right">
-            <div class="label">
-                <span>标签</span><br>
+            <div class="right-list">
+                <div class="latest-paper">
+                    最新文章
+                </div>
                 <ul>
                     <li>
-                        <a href="#">
-                            国馆
-                        </a>
+                        <div class="right-date">2014年5月1日</div>
+                        <div class="right-list-detail">
+                            国馆酒亮相国际名酒展，国馆酒亮相国际名酒展
+                        </div>
                     </li>
                     <li>
-                        <a href="#">
-                            国馆
-                        </a>
+                        <div class="right-date">2014年5月1日</div>
+                        <div class="right-list-detail">
+                            国馆酒亮相国际名酒展，国馆酒亮相国际名酒展
+                        </div>
                     </li>
                     <li>
-                        <a href="#">
-                            国馆国馆国馆国馆
-                        </a>
+                        <div class="right-date">2014年5月1日</div>
+                        <div class="right-list-detail">
+                            国馆酒亮相国际名酒展，国馆酒亮相国际名酒展
+                        </div>
+                    </li>
+                    <li>
+                        <div class="right-date">2014年5月1日</div>
+                        <div class="right-list-detail">
+                            国馆酒亮相国际名酒展，国馆酒亮相国际名酒展
+                        </div>
+                    </li>
+                    <li>
+                        <div class="right-date">2014年5月1日</div>
+                        <div class="right-list-detail">
+                            国馆酒亮相国际名酒展，国馆酒亮相国际名酒展
+                        </div>
                     </li>
                 </ul>
+                <div class="latest-paper">
+                    <a href="#">
+                        查看全部媒体新闻 >
+                    </a>
+                </div>
             </div>
         </div>
 
