--- a/weixinApp/appmodel/index.html
+++ b/weixinApp/appmodel/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html ng-app="phonecatApp">
     <head>
         <meta charset="UTF-8" />
@@ -250,7 +250,7 @@
                 <div class="scroll">
                     <form class="scroll">
                         <ul class="edit rounded">
-                            <li><input type="number" pattern="[0-9]*" name="number" placeholder="请输入手机号码" id="some_name"></li>
+                            <li><input type="tel" name="number" placeholder="请输入手机号码" id="some_name"></li>
                         </ul>
                     </form>
                     <a href="javascript:startTest();" class="redButton">开始测试</a>
@@ -577,9 +577,8 @@
     <script src="lib/js/charts.js" type="text/javascript"></script>
     <script>
         $(document).ready(function(){
-            chartJs();
+            $("#some_name").focus();
         })
-
 
         if (window.navigator.standalone) {
             $("meta[name='apple-mobile-web-app-status-bar-style']").remove();
