--- a/newGuo/index.html
+++ b/newGuo/index.html
@@ -76,6 +76,11 @@
                             </li>
                         </ul>
                     </li>
+                    <li class="nav-main-item " style="float: right; padding-right: 0;">
+                        <a href="#" target="_blank">
+                            媒体新闻
+                        </a>
+                    </li>
                 </ul>
             </div>
             <div class="right">
