--- a/newGuo/index.html
+++ b/newGuo/index.html
@@ -135,11 +135,11 @@
                         <a href="javascript:window.open('http://sina.com','_self')" class="btn btn-red purchase-button-position index-purchase-button" style="">立即购买</a>
                     </div>
                 </li>
-                <li style='display:none;'>
+<!--                <li style='display:none;'>
                     <div class="index-banner" onclick="window.open('http://baidu.com')">
                         <img src="images/banner_02.jpg" alt="父亲节"/>
                     </div>
-                </li>
+                </li>-->
             </ul>
 
             <div class="index-angle">
@@ -593,6 +593,10 @@
         active=index;
         as[active].className='active';
     }});
+
+    if($("#slide li").length == 1){
+        $(".index-angle").css("display","none");
+    }
 
     $("#slide li").hover(function(){
         t4.pause();
