--- a/weixinsite/m-index.html
+++ b/weixinsite/m-index.html
@@ -16,15 +16,17 @@
 <body>
 <!--head-->
 <nav>
-    <div class="icon-home-appearance icon-active" >
-        国馆商城
-    </div>
-    <a href="m-center.html">
+    <a href="m-index.html">
+        <div class="icon-home-appearance icon-active" >
+            国馆商城
+        </div>
+    </a>
+    <a href="m-shoppingCart.html">
         <div class=" icon-shopping-cart icon-user-appearance icon-active">
             <span class="cart-number">3</span>
         </div>
     </a>
-    <a href="m-shoppingCart.html">
+    <a href="m-center.html">
         <div class="icon-user icon-shopping-cart-appearance icon-active">
         </div>
     </a>
@@ -35,11 +37,11 @@
     <div class="swiper-main">
         <div class="swiper-container swiper1">
             <div class="swiper-wrapper">
-                <div class="swiper-slide" style="background: url('image/1-2.png')  center top no-repeat;">
+                <div class="swiper-slide backgroundsise-cover" style="background: url('image/720x480.jpg') center top no-repeat;">
                 </div>
-                <div class="swiper-slide" style="background: url('image/1-2.png') center top no-repeat;">
+                <div class="swiper-slide backgroundsise-cover" style="background: url('image/720x480.jpg') center top no-repeat;">
                 </div>
-                <div class="swiper-slide" style="background: url('image/1-2.png') center top no-repeat;">
+                <div class="swiper-slide backgroundsise-cover" style="background: url('image/720x480.jpg') center top no-repeat;">
                 </div>
             </div>
         </div>
@@ -63,60 +65,68 @@
         </a>
     </li>
     <li>
-        <a href="#">
+        <a href="m-news.html">
             国馆新闻
         </a>
     </li>
 </ul>
 <div class="left-and-right">
-    <div class="left" style="height: 20rem">
+    <div class="left" style="height: 24rem">
         <div class="swiper-container swiper-dynamic">
             <div class="swiper-wrapper">
-                <div class="swiper-slide blue-slide">
-                    <div class="product-slide">
-                        <div class="title">
-                            国馆中国道
-                        </div>
-                        <div class="detail">
-                            中国收藏级文化白酒
-                            <br>
-                            699元起
-                        </div>
-                    </div>
-                </div>
-                <div class="swiper-slide red-slide">
-                    <div class="product-slide">
-                        <div class="title">
-                            国馆中国道
-                        </div>
-                        <div class="detail">
-                            中国收藏级文化白酒
-                            <br>
-                            699元起
+                <div class="swiper-slide backgroundsise-cover" style="background: url('image/11_06.jpg ') center top no-repeat; ">
+                    <div class="bg-gradients-top" style="height: 24rem">
+                        <div class="product-slide">
+                            <div class="title">
+                                国馆中国道
+                            </div>
+                            <div class="detail">
+                                中国收藏级文化白酒
+                                <br>
+                                699元起
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="swiper-slide orange-slide">
-                    <div class="product-slide">
-                        <div class="title">
-                            国馆中国道
-                        </div>
-                        <div class="detail">
-                            中国收藏级文化白酒
-                            <br>
-                            699元起
+                <div class="swiper-slide backgroundsise-cover" style="background: url('image/11_06.jpg ') center top no-repeat; ">
+                    <div class="bg-gradients-top" style="height: 24rem">
+                        <div class="product-slide">
+                            <div class="title">
+                                国馆中国道
+                            </div>
+                            <div class="detail">
+                                中国收藏级文化白酒
+                                <br>
+                                699元起
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="swiper-slide green-slide">
-                    <div class="product-slide">
-                        <div class="title">
-                            国馆中国道
+                <div class="swiper-slide backgroundsise-cover" style="background: url('image/11_06.jpg ') center top no-repeat; ">
+                    <div class="bg-gradients-top" style="height: 24rem">
+                        <div class="product-slide">
+                            <div class="title">
+                                国馆中国道
+                            </div>
+                            <div class="detail">
+                                中国收藏级文化白酒
+                                <br>
+                                699元起
+                            </div>
                         </div>
-                        <div class="detail">
-                            中国收藏级文化白酒
-                            <br>
-                            699元起
+                    </div>
+                </div>
+                <div class="swiper-slide backgroundsise-cover" style="background: url('image/11_06.jpg ') center top no-repeat;">
+                    <div class="bg-gradients-top" style="height: 24rem">
+                        <div class="product-slide">
+                            <div class="title">
+                                国馆中国道
+                            </div>
+                            <div class="detail">
+                                中国收藏级文化白酒
+                                <br>
+                                699元起
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -124,24 +134,22 @@
             <div class="pagination pagination2"></div>
         </div>
     </div>
-    <div class="right" style="height: 20rem">
-        <div class="right-one"  style="background: url('image/1-3.png') center top no-repeat;">
-            <div class="content-model">
-                <div class="title">
-                    宣传视频
-                </div>
-                <div class="detail">
-                    史上最惊艳的中国风
+    <div class="right" style="height: 24rem">
+        <div class="right-one backgroundsise-cover" style="background: url('image/11_01.jpg ') center top no-repeat;">
+            <div class="bg-gradients-bottom" style="height: 12rem">
+                <div class="content-model">
+                    <div class="title">
+                        宣传视频
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="right-two"  style="background: url('image/1-4.png') center top no-repeat;">
-            <div class="content-model">
-                <div class="title">
-                    大师跨价之作
-                </div>
-                <div class="detail">
-                    艺术大事李正天与酿酒大师李家顺
+        <div class="right-two backgroundsise-cover" style="background: url('image/11_02.jpg ') center top no-repeat; ">
+            <div class="bg-gradients-bottom" style="height: 12rem">
+                <div class="content-model">
+                    <div class="title">
+                        大师跨界之作
+                    </div>
                 </div>
             </div>
         </div>
@@ -149,51 +157,155 @@
     <div style="clear: both"></div>
 </div>
 <div class="left-and-right">
-    <div class="left"  style="background: url('image/1-5.png') center top no-repeat;">
-        <div class="content-model">
-            <div class="title">
-                中国道的哲学
-            </div>
-            <div class="detail">
-                最中国的人生哲学，藏与一套
+    <div class="left backgroundsise-cover" style="background: url('image/11_03.jpg ') center top no-repeat; ">
+        <div class="bg-gradients-bottom" style="height: 12rem">
+            <div class="content-model">
+                <div class="title">
+                    中国道的哲学
+                </div>
             </div>
         </div>
     </div>
-    <div class="right" style="background: url('image/1-6.png') center top no-repeat;">
-        <div class="content-model">
-            <div class="title">
-                顶级酒品
-            </div>
-            <div class="detail">
-                中国品酒大师评价为“酒中的极品”
+    <div class="right backgroundsise-cover" style="background: url('image/11_04.jpg ') center top no-repeat;">
+        <div class="bg-gradients-bottom" style="height: 12rem">
+            <div class="content-model">
+                <div class="title">
+                    顶级酒品
+                </div>
             </div>
         </div>
     </div>
     <div style="clear: both"></div>
 </div>
 
-<div class="big-content" style="background:url('image/1-2.png') center top no-repeat;">
+<div class="big-content backgroundsise-cover" style="background: url('image/720x480.jpg') center top no-repeat;">
+    <div class="middle">
+        <div class="category">
+            品牌故事
+        </div>
+        <div class="title">
+            国馆，重新定义中国礼
+        </div>
+    </div>
+</div>
 
+<div class="big-content backgroundsise-cover" style="background: url('image/720x480.jpg') center top no-repeat;">
+    <div class="middle">
+        <div class="category">
+            国馆会
+        </div>
+        <div class="title">
+            私人拉丁舞聚会
+        </div>
+        <div class="data">
+            2014.08.09
+        </div>
+    </div>
+</div>
+<div class="left-and-right">
+    <div class="left backgroundsise-cover" style="background: url('image/11_03.jpg ') center top no-repeat;">
+        <div class="bg-gradients-bottom" style="height: 12rem">
+            <div class="content-model">
+                <div class="title">
+                    国馆酒亮相国际名酒展，成外商眼中“香饽饽”
+                </div>
+                <div class="detail">
+                    2014.08.09
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="right backgroundsise-cover" style="background: url('image/11_04.jpg ') center top no-repeat;">
+        <div class="bg-gradients-bottom" style="height: 12rem">
+            <div class="content-model">
+                <div class="title">
+                    著名艺术家李正天挥毫演绎“国馆”
+                </div>
+                <div class="detail">
+                    2014.08.09
+                </div>
+            </div>
+        </div>
+    </div>
+    <div style="clear: both"></div>
+</div>
+
+<!--应用-->
+<div class="big-content">
+    <div class="swiper-main">
+        <div class="swiper-container swiper3">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide backgroundsise-cover" style="background: url('image/720x480.jpg') center top no-repeat;">
+                    <div class="app-guo">
+                        <div class="category">
+                            应用/国馆电台
+                        </div>
+                        <div class="title">
+                            重逢
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide backgroundsise-cover" style="background: url('image/720x480.jpg') center top no-repeat;">
+                    <div class="app-guo">
+                        <div class="category">
+                            应用/下一小时
+                        </div>
+                        <div class="title">
+                            相遇
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide backgroundsise-cover" style="background: url('image/720x480.jpg') center top no-repeat;">
+                    <div class="app-guo">
+                        <div class="category">
+                            应用/每日一文
+                        </div>
+                        <div class="title">
+                            背影
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="pagination pagination3"></div>
+    </div>
+</div>
+<div style="height: 1rem"></div>
+<div class="big-content backgroundsise-cover" style="background: url('image/720x480.jpg') center top no-repeat;">
+    <div class="app-guo">
+        <div class="category">
+            国馆说
+        </div>
+        <div class="title">
+            三分钟了解中国人为什么那么受喝酒
+        </div>
+    </div>
 </div>
 
 <!--footer-->
 <div class="footer">
-    <div class="mb1">
+<!--    <div class="mb1">
         <span class="selected">
             触屏版
         </span>
         <span>
             电脑版
         </span>
-    </div>
-    <div>
-        广州国馆酒业有限公司
-    </div>
-    <div>
-        <span>客服电话：400-900-5000</span>
-        <span>微信服务号：国馆酒</span>
-    </div>
-    <div>客服时间：工作日 9:00 - 18:00</div>
+    </div>-->
+    <ul class="footer-content">
+        <li>
+            <a tel="4009005000">
+                <i class="icon-phone"></i>
+                400-900-5000
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                    <img src="img/wx_black.png" alt="" style="width: 1.6rem; height: 1.6rem; vertical-align: middle"/>
+                关注“国馆酒”
+            </a>
+        </li>
+    </ul>
 </div>
 </body>
 <script src="js/jquery-1.7.1.min.js" type="text/javascript"></script>
