--- a/weixinsite/m-address-add.html
+++ b/weixinsite/m-address-add.html
@@ -9,81 +9,111 @@
     <link rel="stylesheet" href="css/font-awesome-ie7.min.css">
     <link rel="stylesheet" href="css/m-cart.css">
 </head>
-<body>
+<body style="background-color: #fff;">
+<!--head-->
 <nav>
-    <div class="icon-home icon-home-appearance icon-active" ></div>
+    <a href="m-index.html">
+        <div class="icon-home-appearance icon-active" >
+            国馆商城
+        </div>
+    </a>
     <h3 class=" head-title-appearance">添加地址</h3>
     <a href="m-shoppingCart.html">
-        <div class="icon-shopping-cart icon-shopping-cart-appearance icon-active"></div>
+        <div class=" icon-shopping-cart icon-user-appearance icon-active">
+            <span class="cart-number">3</span>
+        </div>
+    </a>
+    <a href="m-center.html">
+        <div class="icon-user icon-shopping-cart-appearance icon-active">
+        </div>
     </a>
 </nav>
 
-<div class="content">
-    <div class="">
-        <div class="m-modify-name mb0-6">
-            收货人姓名:
+<div class="content mt0">
+    <div class="input-area m-underline-ebebeb">
+        <div class="m-modify-name">
+            收货人:
         </div>
-        <div class=" m-underline-d0d0d0 mt1 m-modify-input">
-            <input type="text" placeholder="请填写收货人的真实姓名" class="m-input">
+        <div class="m-modify-input">
+            <div class="m-modify-input-wrap">
+                <input type="text" placeholder="请填写收货人的真实姓名" class="m-input">
+            </div>
         </div>
+        <div><span class="tips-error">请输入姓名</span></div>
     </div>
-    <div><span class="tips-error">请输入姓名</span></div>
 
-    <div class="m-modify-name mb0-6 mt1">
-        收货地址
-    </div>
-    <div>
-        <select class="select-appearance mb0-6">
-            <option>请选择省</option>
-            <option>广东省</option>
-            <option>湖南省</option>
-            <option>湖北省</option>
-        </select>
-        <select class="select-appearance mb0-6">
-            <option>请选择市</option>
-            <option>广州市</option>
-            <option>深圳市</option>
-            <option>东莞市</option>
-        </select>
-    </div>
-    <div class="mb0-6">
-        <select class="select-appearance">
-            <option>请选择区</option>
-            <option>天河区</option>
-            <option>越秀区</option>
-            <option>荔枝区</option>
-        </select>
-    </div>
-    <div class="">
-        <div class="m-modify-name mb0-6 mt1">
-            详细地址:
-        </div>
-        <div class=" m-underline-d0d0d0 mt1 m-modify-input">
-            <input type="text" placeholder="详细街道地址，不少于10个字" class="m-input ">
-        </div>
-    </div>
-    <div><span class="tips-error">不少于10个字</span></div>
-
-
-    <div class="">
-        <div class="m-modify-name mb0-6 mt1">
-            邮政编码:
-        </div>
-        <div class=" m-underline-d0d0d0 mt1 m-modify-input">
-            <input type="text" placeholder="邮政编码，6位数字" class="m-input">
-        </div>
-    </div>
-    <div><span class="tips-error">请输入正确的手机号码</span></div>
-
-    <div class="">
-        <div class="m-modify-name mb0-6 mt1 ">
+    <div class="m-underline-ebebeb input-area">
+        <div class="m-modify-name">
             手机号码:
         </div>
-        <div class=" m-underline-d0d0d0 mt1 m-modify-input">
-            <input type="text" placeholder="联系人电话，11位数字" class="m-input ">
+        <div class="m-modify-input">
+            <div class="m-modify-input-wrap">
+                <input type="text" placeholder="联系人电话，11位数字" class="m-input ">
+            </div>
+        </div>
+        <div><span class="tips-error">请输入正确的手机号码</span></div>
+    </div>
+
+
+    <!--省市联动-->
+    <div class="input-area m-underline-ebebeb">
+        <div class="m-modify-name">
+            省份:
+        </div>
+        <div class="m-modify-input">
+            <div class="m-modify-input-wrap">
+                <select class="select-appearance ">
+                    <option>请选择省</option>
+                    <option>广东省</option>
+                    <option>湖南省</option>
+                    <option>湖北省</option>
+                </select>
+            </div>
         </div>
     </div>
-    <div><span class="tips-error">请输入正确的手机号码</span></div>
+    <div class="input-area m-underline-ebebeb">
+        <div class="m-modify-name">
+            城市:
+        </div>
+        <div class="m-modify-input">
+            <div class="m-modify-input-wrap">
+                <select class="select-appearance ">
+                    <option>请选择市</option>
+                    <option>广州市</option>
+                    <option>深圳市</option>
+                    <option>东莞市</option>
+                </select>
+            </div>
+        </div>
+    </div>
+    <div class="input-area m-underline-ebebeb">
+        <div class="m-modify-name">
+            区县:
+        </div>
+        <div class="m-modify-input">
+            <div class="m-modify-input-wrap">
+                <select class="select-appearance ">
+                    <option>请选择区</option>
+                    <option>天河区</option>
+                    <option>越秀区</option>
+                    <option>荔枝区</option>
+                </select>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="m-underline-ebebeb input-area">
+        <div class="m-modify-name">
+            详细地址:
+        </div>
+        <div class="m-modify-input">
+            <div class="m-modify-input-wrap">
+                <input type="text" placeholder="详细街道地址，不少于10个字" class="m-input ">
+            </div>
+        </div>
+        <div><span class="tips-error">不少于10个字</span></div>
+    </div>
 
     <div class="m-button mt3" style="width: 100%">
         <div class="m-button-content">
@@ -92,15 +122,30 @@
     </div>
 </div>
 
+<!--footer-->
 <div class="footer">
-    <div>
-        <span>
-            登录
-        </span>
-        <span>
-            注册
-        </span>
-    </div>
+    <!--    <div class="mb1">
+            <span class="selected">
+                触屏版
+            </span>
+            <span>
+                电脑版
+            </span>
+        </div>-->
+    <ul class="footer-content">
+        <li>
+            <a tel="4009005000">
+                <i class="icon-phone"></i>
+                400-900-5000
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <img src="img/wx_black.png" alt="" style="width: 1.6rem; height: 1.6rem; vertical-align: middle"/>
+                关注“国馆酒”
+            </a>
+        </li>
+    </ul>
 </div>
 </body>
 </html>
