--- a/weixinsite/m-shoppingCart-empty.html
+++ b/weixinsite/m-shoppingCart-empty.html
@@ -12,14 +12,22 @@
     <link rel="stylesheet" href="css/m-cart.css">
 </head>
 <body>
+<!--head-->
 <nav>
-    <div class="icon-home icon-home-appearance icon-active" ></div>
-    <h3 class=" head-title-appearance">购物车</h3>
-    <a href="m-center.html">
-        <div class="icon-user icon-user-appearance icon-active"></div>
+    <a href="m-index.html">
+        <div class="icon-home-appearance icon-active" >
+            国馆商城
+        </div>
     </a>
+    <h3 class=" head-title-appearance">购物车</h3>
     <a href="m-shoppingCart.html">
-        <div class="icon-shopping-cart icon-shopping-cart-appearance icon-active"></div>
+        <div class=" icon-shopping-cart icon-user-appearance icon-active">
+            <span class="cart-number">3</span>
+        </div>
+    </a>
+    <a href="m-center.html">
+        <div class="icon-user icon-shopping-cart-appearance icon-active">
+        </div>
     </a>
 </nav>
 
