--- a/weixinsite/m-shoppingCart-modify.html
+++ b/weixinsite/m-shoppingCart-modify.html
@@ -10,13 +10,26 @@
     <link rel="stylesheet" href="css/m-cart.css">
 </head>
 <body>
+<!--head-->
 <nav>
-    <div class="icon-home icon-home-appearance icon-active" ></div>
+    <a href="m-index.html">
+        <div class="icon-home-appearance icon-active" >
+            国馆商城
+        </div>
+    </a>
     <h3 class=" head-title-appearance">修改购物车</h3>
     <a href="m-shoppingCart.html">
-        <div class="icon-shopping-cart icon-shopping-cart-appearance icon-active"></div>
+        <div class=" icon-shopping-cart icon-user-appearance icon-active">
+            <span class="cart-number">3</span>
+        </div>
+    </a>
+    <a href="m-center.html">
+        <div class="icon-user icon-shopping-cart-appearance icon-active">
+        </div>
     </a>
 </nav>
+
+
 <div class="content">
     <div class="m-product-image">
         <img src="image/1-1.png" style="width: 100%;">
@@ -41,12 +54,12 @@
             <option>5</option>
         </select>
     </div>
-    <div class="m-delete-button" style="width: 49%">
+    <div class="m-button-empty mt1" style="width: 49%">
         <div class="m-button-content">
             删除
         </div>
     </div>
-    <div class="m-button" style="width: 49%">
+    <div class="m-button mt1" style="width: 49%">
         <div class="m-button-content">
             完成
         </div>
