--- a/weixinsite/m-address-admin.html
+++ b/weixinsite/m-address-admin.html
@@ -10,74 +10,133 @@
     <link rel="stylesheet" href="css/m-cart.css">
 </head>
 <body>
+<!--head-->
 <nav>
-    <div class="icon-home icon-home-appearance icon-active" ></div>
-    <h3 class=" head-title-appearance">收货地址</h3>
+    <a href="m-index.html">
+        <div class="icon-home-appearance icon-active" >
+            国馆商城
+        </div>
+    </a>
+    <h3 class=" head-title-appearance">地址管理</h3>
     <a href="m-shoppingCart.html">
-        <div class="icon-shopping-cart icon-shopping-cart-appearance icon-active"></div>
+        <div class=" icon-shopping-cart icon-user-appearance icon-active">
+            <span class="cart-number">3</span>
+        </div>
+    </a>
+    <a href="m-center.html">
+        <div class="icon-user icon-shopping-cart-appearance icon-active">
+        </div>
     </a>
 </nav>
 
-<div class="content">
-    <div class="m-shopping-cart m-address-cart">
-        <ul class="m-choose-product">
-            <li>
-                <a href="m-address-modify.html">
-                    <div class="m-choose-detail m-address-display">
-                        <div class="m-choose-title">
-                            广东省广州市天河区
-                        </div>
-                        <div class="m-choose-brief-detail">
-                            华明路13华普广场东塔702（518129）谢奇 18503014025
-                        </div>
+<!--content-->
+<div class="m-shopping-cart m-address-cart">
+    <ul class="m-choose-product">
+        <li>
+            <!--地址选择按钮-->
+            <a href="#">
+                <div class="m-address-choose">
+                </div>
+                <div class="m-choose-detail m-address-display">
+                    <div class="m-choose-brief-detail">
+                        广东省广州市天河区华明路13华普广场东塔702（518129）
                     </div>
-                    <div class="icon-angle-right icon-angle-right-appearance"></div>
-                    <div class="clear"></div>
-                </a>
-            </li>
-            <li>
-                <a href="m-address-modify.html">
-                    <div class="m-choose-detail m-address-display">
-                        <div class="m-choose-title">
-                            广东省广州市天河区
-                        </div>
-                        <div class="m-choose-brief-detail">
-                            华明路13华普广场东塔702（518129）谢奇 18503014025
-                        </div>
+                    <div class="m-choose-title">
+                        谢奇 18503014025
                     </div>
-                    <div class="icon-angle-right icon-angle-right-appearance"></div>
-                    <div class="clear"></div>
-                </a>
-            </li>
-        </ul>
-    </div>
+                </div>
+            </a>
+            <div class="clear"></div>
 
-    <div class="m-shopping-cart">
-        <ul class="m-choose-product m-address-add-button">
-            <li>
-                <a href="m-address-add.html">
-                    <div class="m-choose-detail m-address-display">
-                        <div>
-                            添加新地址
-                        </div>
+            <!--地址编辑按钮-->
+            <a href="m-address-modify.html">
+                <div class="m-address-edit">
+                    编辑
+                </div>
+            </a>
+        </li>
+        <li>
+            <!--地址选择按钮-->
+            <a href="#">
+                <div class="m-address-choose address-selected">
+                </div>
+                <div class="m-choose-detail m-address-display">
+                    <div class="m-choose-brief-detail">
+                        广东省广州市天河区华明路13华普广场东塔702（518129）
                     </div>
-                    <div class="icon-angle-right icon-angle-right-appearance icon-angle-right-address"></div>
-                    <div class="clear"></div>
-                </a>
-            </li>
-        </ul>
-    </div>
+                    <div class="m-choose-title">
+                        谢奇 18503014025
+                    </div>
+                </div>
+            </a>
+            <div class="clear"></div>
+
+            <!--地址编辑按钮-->
+            <a href="m-address-modify.html">
+                <div class="m-address-edit">
+                    编辑
+                </div>
+            </a>
+        </li>
+        <li>
+            <!--地址选择按钮-->
+            <a href="#">
+                <div class="m-address-choose">
+                </div>
+                <div class="m-choose-detail m-address-display">
+                    <div class="m-choose-brief-detail">
+                        广东省广州市天河区华明路13华普广场东塔702（518129）
+                    </div>
+                    <div class="m-choose-title">
+                        谢奇 18503014025
+                    </div>
+                </div>
+            </a>
+            <div class="clear"></div>
+
+            <!--地址编辑按钮-->
+            <a href="m-address-modify.html">
+                <div class="m-address-edit">
+                    编辑
+                </div>
+            </a>
+        </li>
+    </ul>
+</div>
+<div class="content">
+    <a href="m-address-add.html">
+        <div class="m-button m-button-check">
+            <div class="m-button-content">
+                添加地址
+            </div>
+        </div>
+    </a>
 </div>
 
+<!--footer-->
 <div class="footer">
-    <div>
-        <span>
-            登录
-        </span>
-        <span>
-            注册
-        </span>
-    </div>
+    <!--    <div class="mb1">
+            <span class="selected">
+                触屏版
+            </span>
+            <span>
+                电脑版
+            </span>
+        </div>-->
+    <ul class="footer-content">
+        <li>
+            <a tel="4009005000">
+                <i class="icon-phone"></i>
+                400-900-5000
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <img src="img/wx_black.png" alt="" style="width: 1.6rem; height: 1.6rem; vertical-align: middle"/>
+                关注“国馆酒”
+            </a>
+        </li>
+    </ul>
 </div>
 </body>
 </html>
