--- a/weixinsite/m-shoppingCart.html
+++ b/weixinsite/m-shoppingCart.html
@@ -58,7 +58,7 @@
                     华明路13华普广场东塔702（518129）谢奇 18503014025
                 </div>
             </div>
-            <div class="icon-angle-right icon-angle-right-appearance" style="padding-right:1rem"></div>
+            <div class="icon-angle-right icon-angle-right-appearance" style="padding-right:1.8rem"></div>
             <div class="clear"></div>
         </a>
     </li>
@@ -152,7 +152,7 @@
     <a href="m-online-pay.html">
         <div class="m-button m-button-check">
             <div class="m-button-content">
-                立即支付
+                微信支付
             </div>
         </div>
     </a>
